--- a/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor.hbs
+++ b/assets/javascripts/discourse/templates/admin-plugins-activity-pub-actor.hbs
@@ -26,6 +26,13 @@
           class="activity-pub-actor-table-model"
         />
         <div
+          class="activity-pub-actor-table-status directory-table__column-header"
+        >
+          <div class="header-contents">
+            {{i18n "admin.discourse_activity_pub.actor.table.status"}}
+          </div>
+        </div>
+        <div
           class="activity-pub-actor-table-actions directory-table__column-header"
         >
           <div class="header-contents">
@@ -35,23 +42,10 @@
       </:header>
       <:body>
         {{#each this.actors as |actor|}}
-          <div class="directory-table__row activity-pub-actor-table-row">
-            <div class="directory-table__cell activity-pub-actor-table-actor">
-              <ActivityPubActor @actor={{actor}} />
-            </div>
-            <div class="directory-table__cell activity-pub-actor-table-model">
-              <ActivityPubActorModel @actor={{actor}} />
-            </div>
-            <div class="directory-table__cell activity-pub-actor-table-actions">
-              <DButton
-                @action={{action "editActor" actor}}
-                @label="admin.discourse_activity_pub.actor.edit.label"
-                @title="admin.discourse_activity_pub.actor.edit.title"
-                @icon="pencil"
-                class="activity-pub-actor-edit-btn"
-              />
-            </div>
-          </div>
+          <ActivityPubActorAdminRow
+            @actor={{actor}}
+            @removeActor={{this.removeActor}}
+          />
         {{/each}}
       </:body>
     </ResponsiveTable>
