--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -185,7 +185,6 @@ section.activity-pub-actor-setting {
 .activity-pub-topic-info {
   display: flex;
   flex-direction: column;
-  gap: 0.25em;
 
   span,
   a {
@@ -621,6 +620,12 @@ body.user-preferences-activity-pub-page {
 }
 
 .activity-pub-topic-modal {
+  .control-group {
+    .controls + .controls {
+      margin-top: 9px;
+    }
+  }
+
   .control-group:not(:last-child) {
     margin-bottom: 1.3em;
   }
